--- a/src/index.html
+++ b/src/index.html
@@ -6,14 +6,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BlackJack</title>
-    <link rel="stylesheet" href="assets/css/styles.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.4.0/dist/sweetalert2.all.min.js" integrity="sha256-WytkU8Xrh6h+8sc4jcaZcl47v0P/5Xq1VfhIoHZkMgk=" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <body>
 
-    <header class="titulo animated fadeIn">
+    <header class="titulo animated zoomInUp">
         BLACKJACK
     </header>
     <div class="row mt-2">
@@ -41,16 +40,7 @@
             </div>
         </div>
     </div>
-    <!-- <script src="assets/js/underscore-min.js"></script>
-    <script src="assets/js/juego.js"></script> -->
-    <script>
-        
-        // document.querySelector('#btnNuevoJuego').addEventListener('click', ()=>{
-        //     miModulo.nuevoJuego();
-        // });
 
-
-    </script>
 </body>
 
 </html>
